# neofi_note_api

./: .gitignore  README.md  pyproject.toml
neofi_api/: manage.py
neofi_api/backend/: models.py  serializers.py  tests.py  urls.py  views.py
neofi_api/backend/migrations/: 0001_initial.py  0002_note_shared_with_alter_sharednoteuser_note.py
neofi_api/neofi_api/: asgi.py  settings.py  urls.py  wsgi.py
